tests/fixtures/invalid/dict_lt_str.py
# Cannot compare with < Dict[str, int] and Str
x: bool = {"a": 1} < "hello"
